syntax = "proto3";

package authentication;

option go_package = ".;authentication";

service AuthenticationService {
    rpc RegisterToken (RegReq) returns (RegResp);
    rpc RemoveToken (RemoveReq) returns (RemoveResp);
    rpc CheckToken (CheckReq) returns (CheckResp);
}

message RegReq {
    
}
message RegResp {
    
}

message RemoveReq {
    
}
message RemoveResp {
    
}

message CheckReq {
}
message CheckResp {
}
